--- a/application/frontend/src/styles/toDoList/ToDoList.css
+++ b/application/frontend/src/styles/toDoList/ToDoList.css
@@ -26,7 +26,7 @@
 /* Smaller todo container for group study page */
 .groupStudyRoom-container .todo-container {
     width: 380px; 
-    height: 480px;
+    height: 40vh;
     min-width: 350px;
     min-height: 400px;
     padding: 20px;
